--- a/Content/Handy/Handy.htm
+++ b/Content/Handy/Handy.htm
@@ -5,6 +5,12 @@
     </head>
     <body>
         <h1>Handy Information</h1>
-        <p>Here is some general text for a topic. Replace this with your own content. </p>
+        <p>If you want to learn more about exceptional consignments you are in the right place.</p>
+        <p>Visit our Frequently Asked Questions (FAQs) section for  information and guidance on handling requests and client's inquiries on exceptional consignments.</p>
+        <p>Link</p>
+        <p>For a deeper understanding of the wagon signs, stations and commodity groups codes, and loading gauges, please refer to the links in X topic.</p>
+        <p>Link</p>
+        <p>Here you can find definitions, abbreviations, gauge codes and calculation symbols often used in the exceptional consignments communications</p>
+        <p>Link</p>
     </body>
 </html>
