--- a/Content/Heavy/Excess to Load Limit.htm
+++ b/Content/Heavy/Excess to Load Limit.htm
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Excess to Load Limit within Carrying Capacity</h1>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <p>Note: Due to the underestimation of time necessary for the topic development, this topic is left for information purposes, as it is of importance for the definition of exceptional consignment. The author expects to complete the missing topic after graduation, while the MadcapFlare licence is still active.Here is some general text for a topic. Replace this with your own content.</p>
     </body>
 </html>
