--- a/Content/Heavy/Heavy.htm
+++ b/Content/Heavy/Heavy.htm
@@ -4,12 +4,17 @@
     </head>
     <body>
         <h1>Heavy Load</h1>
-        <p>The European railway network is a critical component of the continent's logistics infrastructure, facilitating the movement of goods across countries efficiently. One aspect of rail transport that presents unique challenges is the transportation of Heavy Exceptional Consignments (HEC). These  shipments exceed the standard weights for rail transport. In the context of European Rail with a standard gauge of 1435 mm, a consignment is typically considered 'heavy' when it surpasses the maximum load capacity of 22.5 tonnes per axle.</p>
-        <p>Warning: In some networks or just on selected lines or sidings maximum load may be lower. Always inspect the permissible maximum load on the entire planned route. Poland is one of the countries where approximately 20% paths have maximum load capacity of 20,0 tonnes where additional load 0.5 t per wheelset in  class C requires an exceptional consignment permit.</p>
-        <p>Rail vehicles vary in terms of load limits., </p>
-        <p>Exceeded route's line category</p>
-        <p>Excess to load limit within carrying capacity</p>
-        <p>No details on load limits</p>
-        <p>Load on bogies with more than three axles</p>
+        <p>In Europe facilitating the movement of goods across countries efficiently includes transport of heavy load consignments. Such transports present unique challenges as they exceed the standard weights for rail transport. </p>
+        <p>In the context of European Rail with a standard gauge of 1435 mm, a consignment is typically considered 'heavy' when it surpasses the maximum load capacity of 22.5 tonnes per axle.</p>
+        <p>Vehicles and loaded freight wagons are regarded as heavy load consignments when they:</p>
+        <ul>
+            <li>exceed the lowest permissible line category on the entire route</li>
+            <li>are loaded in excess of the maximum load limit but up to the maximum design carrying capacity (circle symbol)</li>
+            <li>have no details on load limits marked on them</li>
+            <li>are loaded on wagons with bogies having more than three axles per bogie</li>
+        </ul>
+        <p>For heavy load consignments, each application submitted for exceptional consignment should contain a note on exceeded maximum approved axle load or meter load together with reference to permissible line class.</p>
+        <p>Warning: In some networks or just on selected lines or sidings maximum load may be lower. Always inspect the permissible maximum load on the entire planned route. Poland is one of the countries where just under 20% of paths have the maximum load capacity of 20,0 tonnes and where the additional load 0.5 t per wheelset in  class C requires an exceptional consignment permit.</p>
+        <p>Note: Due to the underestimation of time necessary for topics development, this chapter is left for information purposes, as a key component of the definition of exceptional consignments. The author expects to complete the missing topics after the graduation, while the MadcapFlare licence is still active.</p>
     </body>
 </html>
