--- a/Content/Heavy/No Details on Load Limits.htm
+++ b/Content/Heavy/No Details on Load Limits.htm
@@ -6,6 +6,6 @@
     <body>
         <h1>No details on Load Limits</h1>
         <p>For special wagons with specific load tables (e.g. heavy haul wagons) no load table need to be provided.  The complete load table must be provided including the empty load row (if existent).</p>
-        <p> </p>
+        <p> Note: Due to the underestimation of time necessary for the topic development, this topic is left for information purposes, as it is of importance for the definition of exceptional consignment. The author expects to complete the missing topic after graduation, while the MadcapFlare licence is still active.</p>
     </body>
 </html>
