--- a/Content/Other/Lack of Interoperability.htm
+++ b/Content/Other/Lack of Interoperability.htm
@@ -4,26 +4,26 @@
     </head>
     <body>
         <h1>Lack of Interoperability</h1>
-        <p>European Vehicles running on their own wheels when they do not have the required interoperability in country forming part of the route or approval/authotisation to place in service become exceptional consignments. For such vehicles   each application submitted for exceptional consignment  should contain a note on missing vehicle's authorisation in concerned countries.</p>
+        <p>European Vehicles running on their own wheels when they do not have the required interoperability in country forming part of the route or approval/authorisation to place in service become exceptional consignments. For such vehicles   each application submitted for exceptional consignment  should contain a note on missing vehicle's authorisation in concerned countries.</p>
         <h2>Missing authorisation</h2>
-        <p> applies equally to vehicles which are empty, loaded or which  themselves are the subject of a contract of carriage and which do not have the inscriptions or respective marks:</p>
+        <p> applies equally to vehicles which are empty, loaded or which  themselves are the subject of a contract of carriage and when they are not registered as authorised (placed to service) in concerned country, or which do not have the inscriptions or respective marks:</p>
         <ul>
             <li><b>passenger coaches</b>
             </li>
             <li>RIC </li>
             <li><b>freight wagons</b>,</li>
-            <li>TEN GE or TEN&#160;G1</li>
+            <li>TEN GE </li>
             <li>RIV</li>
-            <li>country code in authorisation </li>
+            <li>acceptance marking: TEN&#160;+ G1 or concerned country acronym in approval plate</li>
             <li><b>traction units and multiple units</b>
             </li>
-            <li>when they are not registered as authorised (placed to service) in concerned country (in the ÖBB Infrastruktur AG as "authorised"</li>
+            <li>concerned country acronym in approval plate</li>
             <li><b>special vehicles</b>
             </li>
-            <li>or country code with IM code, or country code with in code in IM grid, or IM code in the agreement grid.</li>
+            <li>concerned country acronym in approval plate or IM's/EVU s code in bi- or multi- lateral agreement grid</li>
         </ul>
         <h2>EVN Number</h2>
-        <p>In <MadCap:glossaryTerm glossTerm="RailGlossary.Term8">EU</MadCap:glossaryTerm> railway vehicles are registered in European Vehicle Register (<MadCap:glossaryTerm glossTerm="RailGlossary.Term9">EVR</MadCap:glossaryTerm>). <br />Registered vehicles have 12-digit <MadCap:glossaryTerm glossTerm="RailGlossary.Term2">EVN</MadCap:glossaryTerm> number which holds information on technical characteristic of the vehicle. Checking the first digit of the EVN number in combination with country where the vehicle is registered allows you to  decide if you are dealing with an authorised or a missing authorisation vehicle. </p>
+        <p>In <MadCap:glossaryTerm glossTerm="RailGlossary.Term8">EU</MadCap:glossaryTerm> railway vehicles are registered in European Vehicle Register (<MadCap:glossaryTerm glossTerm="RailGlossary.Term9">EVR</MadCap:glossaryTerm>). <br />Registered vehicles have 12-digit <MadCap:glossaryTerm glossTerm="RailGlossary.Term2">EVN</MadCap:glossaryTerm> number which holds information on technical characteristic of the vehicle. Checking the first digit of the EVN number in combination with country where the vehicle is registered allows you to  decide if you are dealing with an authorised or a missing authorisation vehicle.</p>
         <p>Table. Rolling stock EVN&#160;numbers and interoperability capability</p>
         <table style="width: 100%;">
             <col style="width: 250px;" />
@@ -36,7 +36,7 @@
                 <tr>
                     <td style="text-align: center;">Rolling stock group</td>
                     <td>
-                        <p style="text-align: center;">Interoperability </p>
+                        <p style="text-align: center;">Interoperability</p>
                         <p style="text-align: center;"> and Vehicle Type</p>
                     </td>
                     <td style="text-align: center;">
@@ -59,19 +59,19 @@ including section 7.1.2
 and all conditions set 
 out in Appendix C</MadCap:popupBody></MadCap:popup> :</p>
                         <p style="text-align: left;">RIV </p>
-                        <p style="text-align: left;">TEN G1</p>
-                        <p style="text-align: left;">TEN GE </p>
+                        <p style="text-align: left;">TEN GE</p>
+                        <p style="text-align: left;">acceptance marking TEN + G1 country acronym in approval plate</p>
                     </td>
                     <td>
-                        <p style="text-align: center;">00 to 09 </p>
+                        <p style="text-align: center;">00 to 09</p>
                         <p style="text-align: center;">10 to 19 
 </p>
                         <p style="text-align: center;">20 to 29 
 </p>
-                        <p style="text-align: center;">30 to 39 </p>
+                        <p style="text-align: center;">30 to 39</p>
                     </td>
-                    <td style="text-align: center;">01 to 99 </td>
-                    <td style="text-align: center;">0000 to 9999 </td>
+                    <td style="text-align: center;">01 to 99</td>
+                    <td style="text-align: center;">0000 to 9999</td>
                     <td style="text-align: center;">000 to 999
  
  </td>
@@ -86,21 +86,16 @@ out in Appendix C</MadCap:popupBody></MadCap:popup> :</p>
 Wagons bilaterally agreed on a network or ona a route basis can be used internationally when they have corresponding inscriptions such as authorisation plate affixed to the wagon. 
 
 New wagons bear the marking TEN CW which informs you that wagon has coded restrictions where vehicle gauge might be one of special concern for you.  </MadCap:popupBody>
-                            </MadCap:popup> -</p>
-                        <p> TEN</p>
-                        <p>TEN CW</p>
-                        <p>or (optional)</p>
-                        <p> agreement plate</p>
-                    </td>
+                            </MadCap:popup> -</p>acceptance marking TEN + CW, country acronym in approval plate + applied kinematic vehicle gauge<p>or</p><p> agreement plate with railway/country code( for codes 41, 43, 45, 81, 83 or 85)</p></td>
                     <td>
-                        <p style="text-align: center;">40 to 49 </p>
+                        <p style="text-align: center;">40 to 49</p>
                         <p style="text-align: center;">
 80 to 89 </p>
                     </td>
-                    <td style="text-align: center;">01 to 99 </td>
-                    <td style="text-align: center;">0000 to 9999 </td>
+                    <td style="text-align: center;">01 to 99</td>
+                    <td style="text-align: center;">0000 to 9999</td>
                     <td style="text-align: center;">000 to 999</td>
-                    <td style="text-align: center;">0 to 9 </td>
+                    <td style="text-align: center;">0 to 9</td>
                 </tr>
                 <tr>
                     <td>
@@ -115,9 +110,9 @@ New wagons bear the marking TEN CW which informs you that wagon has coded restri
 70 to 79</p>
                     </td>
                     <td style="text-align: center;">01 to 99 </td>
-                    <td style="text-align: center;">0000 to 9999 </td>
+                    <td style="text-align: center;">0000 to 9999</td>
                     <td style="text-align: center;">000 to 999</td>
-                    <td style="text-align: center;">0 to 9 </td>
+                    <td style="text-align: center;">0 to 9</td>
                 </tr>
                 <tr>
                     <td>
@@ -131,131 +126,53 @@ pre-defined
 formation </p>
                     </td>
                     <td style="text-align: center;">90 to 99</td>
-                    <td style="text-align: center;">01 to 99 </td>
+                    <td style="text-align: center;">01 to 99</td>
                     <td style="text-align: center;" colspan="2">0000000 to 8999999 </td>
-                    <td style="text-align: center;">0 to 9 </td>
+                    <td style="text-align: center;">0 to 9</td>
                 </tr>
                 <tr>
                     <td>Special vehicles</td>
                     <td style="text-align: center;">90 to 99</td>
-                    <td style="text-align: center;">01 to 99 </td>
-                    <td style="text-align: center;">9000 to 9999 </td>
+                    <td style="text-align: center;">01 to 99</td>
+                    <td style="text-align: center;">9000 to 9999</td>
                     <td style="text-align: center;">000 to 999 
 </td>
-                    <td style="text-align: center;">0 to 9 </td>
+                    <td style="text-align: center;">0 to 9</td>
                 </tr>
             </tbody>
         </table>
         <p>Detailed specifications on EVN vehicle number assignment are laid out in <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:32018D1614">Commission Implementing Decision (EU) 2018/1614</a> </p>
-        <h2>Additional</h2>
-        <p>Additional technical and operational information is required for transport of vehicles on their own wheels when vehicle authorisation is missing. Additional information required for application to IM&#160;can be obtained from the vehicle documentation or at least party from vehicle markings. Once elaborated it must be integrated into the approval application by the consigning RU <b>or added as an Appendix C - page 37</b>.</p>
-        <p>NOTE For vehicles towed on their own wheels without own power less additional declarations are to be declared in addition to the application. For vehicles which run under their own power IMs require more detailed declarations on compliance with the planned route. </p>
+        <h2>Additional Requirements</h2>
+        <p>In the absence of vehicle's authorisation, the transport of vehicles on their own wheels requires supplementary technical and operational details. This information, necessary for the application to IM, can be sourced from the vehicle’s documentation or, to some extent, from its markings. Compiled data should be incorporated into the authorisation application by the dispatching RU or added as an appendix.</p>
+        <p>NOTE For vehicles towed on their own wheels without own power fewer declarations are required in addition to the application. For vehicles running with their own power IMs requires more detailed declarations on compliance with the planned route. </p>
         <h2>Vehicles without authorisation to place in service /approval.</h2>
-        <p>Additional documents certificates are required for carriage of vehicles without authorisation to place in service/approval C page 6.</p>
-        <p>Special Authorisation (cannot find it in TSI)</p>
-        <p>Table: Example of the vehicle data check which RU&#160;shall conduct.</p>
-        <table style="width: 100%;">
-            <col style="width: 126px;" />
-            <col />
-            <col />
-            <col style="width: 297px;" />
-            <col />
-            <col />
-            <tbody>
-                <tr>
-                    <td rowspan="2" style="text-align: center;">Interface</td>
-                    <td colspan="2" style="text-align: center;">Vehicle data in ERATV <br />and  
-technical file</td>
-                    <td colspan="2" style="text-align: center;">Route information available<br /> in  
-RINF or provided byIM</td>
-                    <td rowspan="2" style="text-align: center;">&#160; Result</td>
-                </tr>
-                <tr>
-                    <td style="text-align: center;">ERATV</td>
-                    <td style="text-align: center;">Value</td>
-                    <td style="text-align: center;">RINF reference</td>
-                    <td style="text-align: center;">Value</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">Member state of Authorisation</td>
-                    <td style="text-align: center;"> 3.1.1</td>
-                    <td style="text-align: center;">PL</td>
-                    <td style="text-align: center;">
-                        <p>-</p>
-                        <p>-</p>
-                    </td>
-                    <td style="text-align: center;">
-                        <p>PL</p>
-                        <p>-</p>
-                    </td>
-                    <td style="text-align: center;">
-                        <p>depends on route application</p>
-                        <p>PL&lt;=&gt;PL</p>
-                        <p>PL=&gt; DE</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">Current Status</td>
-                    <td style="text-align: center;">3.1.2.1</td>
-                    <td style="text-align: center;">Valid</td>
-                    <td style="text-align: center;">-</td>
-                    <td style="text-align: center;">-</td>
-                    <td style="text-align: center;">&#160;</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">Gauge - Reference Profile</td>
-                    <td style="text-align: center;"> 4.2.1</td>
-                    <td style="text-align: center;">G1</td>
-                    <td style="text-align: center;">
-                        <p>1.1.1.1.3.</p>
-                        <p>1.1
- 1.2.</p>
-                        <p>1.0.3.4</p>
-                    </td>
-                    <td style="text-align: center;">G1</td>
-                    <td style="text-align: center;">&#160;</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">Ability to be hump shunted</td>
-                    <td style="text-align: center;">&#160;</td>
-                    <td style="text-align: center;">&#160;</td>
-                    <td style="text-align: center;">&#160;</td>
-                    <td style="text-align: center;">&#160;</td>
-                    <td style="text-align: center;">&#160;</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">distance between two adjacent axles not exceeding 17 500 mm</td>
-                    <td style="text-align: center;">&#160;</td>
-                    <td style="text-align: center;">&#160;</td>
-                    <td style="text-align: center;">&#160;</td>
-                    <td style="text-align: center;">&#160;</td>
-                    <td style="text-align: center;">&#160;</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">Train Detection Systems</td>
-                    <td style="text-align: center;">4.14.1</td>
-                    <td style="text-align: center;">
-                        <p>track circuits
- </p>
-                        <p>axle counters</p>
-                        <p>  
-loops</p>
-                    </td>
-                    <td style="text-align: center;"> 1.1.1.3.7.1</td>
-                    <td style="text-align: center;">axle counters</td>
-                    <td style="text-align: center;">&#160;</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">Minimum in
+        <p>Two tools can be attempted to retrieve vehicle information: for vehicles - ERTATV and for routes - RINF. If no information is available for the vehicle in question, ask the client for providing them. State corresponding declarations  in the application, under items #28 on vehicle properties and #29 on vehicle operating properties.</p>
+        <p>For initial check you need to examine:</p>
+        <ul>
+            <li>member state of authorisation</li>
+            <li>current authorisation status</li>
+            <li>certificate for the ability to run</li>
+            <li>vehicle's gauge - reference profile</li>
+            <li> continuous brake pipe availability and efficiency</li>
+            <li>type of traction (optional)</li>
+            <li>buffing and coupling gear</li>
+            <li>distance between two adjacent axles not exceeding 17 500 mm</li>
+            <li>distance between the last axle and the buffers</li>
+            <li>smallest negotiable track radius<br /></li>
+            <li>minimum in
 service wheel  
-diameter</td>
-                    <td style="text-align: center;">4.8.2</td>
-                    <td style="text-align: center;"> 991 mm</td>
-                    <td style="text-align: center;"> 1.1.1.1.5.</td>
-                    <td style="text-align: center;">330 mm</td>
-                    <td style="text-align: center;">&#160;</td>
-                </tr>
-            </tbody>
-        </table>
+diameter</li>
+            <li>the ability to be hump shunted</li>
+            <li>position where to put into the train (any, the last or as the rear of the train)</li>
+        </ul>
+        <p>Additional questions and declarations may become necessary depending on the type of vehicle and on the operational compatibility of the vehicle.</p>
+        <p>New vehicles in testing phase may already have a 12-digit EVN assigned. Ask the customer about:</p>
+        <ul>
+            <li>EVN numbers of the vehicle. If not yet available, then about the manufacturers vehicle numbers so in  code #2a you can declare vehicle numbers individually or as a list of vehicle group</li>
+        </ul>
+        <ul>
+            <li> the status of the EVN number, as it may have status "reserved". If you deal with a freight wagon with the first digit 2 or 3, then be cautious while assessing wagon's authorisation for the network. Inform IM respectively in code #2b</li>
+        </ul>
+        <p>Image EVN statuses</p>
     </body>
 </html>
