--- a/Content/Other/Special Technical Vehicles.htm
+++ b/Content/Other/Special Technical Vehicles.htm
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Special Technical Vehicles</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Note: Due to the underestimation of time necessary for the topic development, this topic is left for information purposes, as it is of importance for the definition of exceptional consignment. The author expects to complete the missing topic after graduation, while the MadcapFlare licence is still active.</p>
     </body>
 </html>
