--- a/Content/Out-of-Gauge/Structure Gauge.htm
+++ b/Content/Out-of-Gauge/Structure Gauge.htm
@@ -4,45 +4,75 @@
     </head>
     <body>
         <h1>Structure Gauge</h1>
-        <p>In rail transport one of the most frequently asked questions is, as to what is the largest train (consisting of a vehicle, or a loaded wagon) that the considered railway network could accommodate? Network capability on accepting larger than standard trains derives from the gauging methods applied.</p>
-        <p>Infrastructure Gauging Methods</p>
+        <p>Railway undertakings are responsible for determining and maintaining the correct rolling stock gauge during transport on infrastructure managers network. In rail transport one of the most frequently asked questions is, as to what is the largest train (consisting of a vehicle, or a loaded wagon) that the considered railway network could accommodate? The answer depends on the network capability on accepting the trains larger than these internationally interoperable without restrictions and it fully derives from the gauging methods applied.</p>
+        <h2>Infrastructure Gauging Methods</h2>
         <p>Three infrastructure gauging methods are currently applied in Europe:</p>
-        <p>•	defined gauging,</p>
-        <p>•	absolute gauging,</p>
-        <p>•	comparative gauging.</p>
-        <p>Europe has generally adopted  a standard UIC approach of defined gauging where infrastructure gauges are defined on the basis of the reference contour and application of associated calculation rules. These UIC gauging methods were originally defined in the 505 series of leaflets. These methods are now also described in the series of European Standard EN 15273.</p>
-        <p>Important! Comparing infrastructure gauges only by their profiles shall not take place since the rules associated which each profile differ from each other.</p>
-        <p>Defined gauging is a convention between the infrastructure manager and the railway undertaking or rolling stock manufacturer. </p>
-        <p>Who needs to know what?</p>
+        <ul>
+            <li>defined gauging</li>
+            <li>absolute gauging</li>
+            <li>comparative gauging</li>
+        </ul>
+        <p>Europe has generally adopted  a standard UIC approach of defined gauging where infrastructure gauges are defined on the basis of the reference contour and application of associated calculation rules. These UIC gauging methods were originally defined in the 505 series of leaflets. They are currently further developed and described in the series of European Standard EN 15273.</p>
+        <h2>EN 15273 Norm - Defined Gauge Method</h2>
+        <p>Defined gauging is a convention between the infrastructure manager and the railway undertaking which is equally important to RUs and rolling stock manufacturers.</p>
+        <h3>Who needs to know what?</h3>
         <ol>
-            <li>The infrastructure manager needs a reference profile to know where obstacles can be put .</li>
+            <li>The infrastructure manager needs a reference profile to know where obstacles can be put.</li>
             <li>Railway undertaking needs to know the reference profile to load vehicles and to safely run vehicles on their wheels. </li>
             <li>The new rolling stock manufacturer needs to know the reference profile to which they construct and build new vehicles. </li>
         </ol>
-        <p>Defined gauging calculation process ensures that vehicle with structure contact can never occur. The EN mandates that the kinematic gauging method is to be used for new and interoperable infrastructure.The infrastructure manager has also an option to create diffrent structure gauges that suit their specific needs. For that reason they apply rules for a Uniform Structure Gauge.</p>
-        <p>&#160;</p>
-        <p>Constriction can be classified into 4 groups</p>
-        <p>Group 1</p>
+        <p>Defined gauging calculation process ensures that vehicle with structure contact never occurs. </p>
+        <h3>Calculation methods</h3>
+        <p>The defined gauge method described in the norm is split into three main calculation methods:</p>
+        <ol style="list-style-type: upper-alpha;">
+            <li> The <b>static</b> method is used on specific, non-interoperable networks.</li>
+            <li>The <b>kinematic</b> method is used in Europe mainly on interoperable networks.</li>
+            <li>The <b>dynamic</b> method is used on certain networks with the aim of optimizing the space available for sizing non-interoperable vehicles.</li>
+        </ol>
+        <p>Important! Comparing infrastructure gauges only by their profiles shall not take place since the rules associated which each profile differ from each other.</p>
+        <h3>Infrastructure Gauge Types</h3>
+        <p>Four types of structure gauges are defined:</p>
+        <ol>
+            <li><b>Structure Verification Limit Gauge</b> - defines the space not to be encroached upon at any time. It fixes the limit for normal operation. It is used to ensure that structures allow free passage. Consequently, no structure is allowed to penetrate this space at any time .</li>
+            <li><b>Structure Installation Limit Gauge</b> - gives the space to be cleared taking into account a maintenance allowance. The allowance is defined according to the line speed and to the track quality at the time of the structure installation. The maintenance allowances have defined maintenance levels which are examined to ensure that the minimum clearance shall always be maintained and allow the safe operation of the vehicles.</li>
+            <li><b>Structure Installation Nominal Gauge</b> - in addition to maintenance allowances, the structure installation  nominal gauge takes into account the safety allowances and of additional reserved allowances defined for the infrastructure, for example of the running of: special consignments, of line speed increase, strong cross winds, aerodynamic effects and …etc.<br /></li>
+            <li style="font-weight: normal;"><b>Uniform Structure Gauge</b> - corresponds to a unique contour, evaluated by infrastructure manager's diagnostics, it includes the most unfavourable situations with significant safety margins.</li>
+        </ol>
+        <p>The EN mandates that the kinematic gauging method is to be used for new and interoperable infrastructure. The infrastructure manager has however also a fourth option to create different structure gauges that suit their specific needs. For that reason they set and apply rules for a Uniform Structure Gauge. </p>
+        <p>Information: In Poland, the infrastructure manager has established two uniformed structure gauges. The GPL-1 gauge is used when upgrading or constructing new railway lines or sections of lines for speeds of 200 km/h or less. On the other hand, the GPL-2 gauge is used for modernizing or constructing new railway lines or sections of lines for speeds greater than 200 km/h, and for all new civil engineering structures and platform shelters, regardless of speed. The uniformed structure gauges are to be assessed separately for the section up to a height of 1,170 mm and for the section above it.</p>
+        <h2>Structure Gauge Constrictions</h2>
+        <p>Constriction may be classified into 4 groups</p>
+        <h3>Group 1</h3>
         <p>Restrictions in the overall space (sideways and upwards)</p>
-        <p>•	Tunnel tubes</p>
-        <p>•	arched overpasses</p>
-        <p>•	Bridges with wind reinforcement at the top</p>
-        <p>•	Electrical overhead contact lines</p>
-        <p>Group 2</p>
+        <ul>
+            <li>Tunnel tubes</li>
+            <li>Arched overpasses</li>
+            <li>Bridges with wind reinforcement at the top</li>
+            <li>	Electrical overhead contact lines</li>
+        </ul>
+        <h3>Group 2</h3>
         <p>Width restrictions</p>
-        <p>•	Retaining walls,</p>
-        <p>•	bridge railing</p>
-        <p>•	Masts Signals</p>
-        <p>Group 3</p>
+        <ul>
+            <li>Retaining walls</li>
+            <li>Bridge railing</li>
+            <li>Masts Signals</li>
+        </ul>
+        <h3>Group 3</h3>
         <p>Width and height restrictions</p>
-        <p>•	Overpasses</p>
-        <p>•	Platform roofs</p>
-        <p>Group 4</p>
-        <p>Height and width restrictions in the area of 0 to X mmm above the top of rail: Platform edges</p>
-        <p>•	Goods platforms</p>
-        <p>•	Track switches</p>
-        <p>•	Dwarf signals</p>
-        <p>•	Bridge reinforcements</p>
-        <p>•	etc.</p>
+        <ul>
+            <li>Overpasses</li>
+            <li>Platform roofs</li>
+        </ul>
+        <h3>Group 4</h3>
+        <p>Height and width restrictions in the area of 0 to X mmm above the top of rail:</p>
+        <ul>
+            <li>Platform edges</li>
+            <li>Goods platforms</li>
+            <li>Track switches</li>
+            <li>Dwarf signals</li>
+            <li>Bridge reinforcements</li>
+            <li>etc.</li>
+        </ul>
+        <p>Note: Infrastructure managers determine individually on their networks how high above the rail head zone 4 ends. The value of X can therefore take on different values and is not specified here.</p>
     </body>
 </html>
