--- a/Content/Heavy/Load on Bogies With More Than Three Axles .htm
+++ b/Content/Heavy/Load on Bogies With More Than Three Axles .htm
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Load on Bogies With More Than Three Axles</h1>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <p>Note: Due to the underestimation of time necessary for the topic development, this topic is left for information purposes, as it is of importance for the definition of exceptional consignment. The author expects to complete the missing topic after graduation, while the MadcapFlare licence is still active.</p>
     </body>
 </html>
