--- a/Content/Path Data.htm
+++ b/Content/Path Data.htm
@@ -4,11 +4,14 @@
     </head>
     <body>
         <h1>Path Data</h1>
-        <p>P</p>
+        <p>The path data specifies the allocation of a railway train over a given route, the sender and receiver of a consignment, the railway undertakings involved, the chosen route, the type of transport organisation, and the party responsible for the transport costs.</p>
+        <p>While “route” and “path” might seem similar, they have distinct meanings in the context of railways. A “route” is the actual course or way taken. A “path” is more about the scheduling and allocation of a train on that route. While declaring route data in the application form keep in mind that data's quality in the application form may directly affect the path allocation for the train with exceptional consignment.</p>
+        <p>An insufficiently checked ordered route will, for example, result in the train getting stuck on the route because the train may have to be split due to short unloading ramp. Failure to check the parameters of the first or last mile, or the parameters of the siding to or from which the train set is to be delivered, may result as delays. in the exceptional transport.</p>
+        <p>Any stoppage or a delay of a train during the take-over or hand-over is an inconvenience not only for the transport organisers. It is also an inconvenience for  other railway undertakings and their clients, due to blocked own resources and network's capacity. It is worth having this concept at the back of your mind when ordering the terms of carriage for an exceptional consignment.</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#20a <MadCap:dropDownHotspot>Consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>The consignor is the contractual party of the  transport contract. Add name and address of a consignor. When consignor data is unknown, declare consignor in descriptive way referring to data in a waybill.<br />For example: Maersk,  in accordance with CIM. </p>
+                <p>The consignor is the contractual party of the  transport contract. Add name and address of a consignor. When consignor data is unknown, declare consignor in descriptive way referring to data in a waybill.<br />For example: Maersk,   in accordance with CIM.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <MadCap:dropDown>
@@ -20,7 +23,7 @@
         <MadCap:dropDown>
             <MadCap:dropDownHead>#21 <MadCap:dropDownHotspot>Dispatch station*.</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Is the station where cargo loaded on the wagon starts it's journey. Indicate station's name, station DIUM code and infrastructure manager's code or county code. When the first mile starts on the private siding add the name of the siding. For larger cities make sure to name exact station's operational name, since there may be a number of station in the city.<br />For example: Villach Sued CCT [81-01990-1](OeBB Infra) <br /></p>
+                <p>Is the station where cargo loaded on the wagon starts its journey. Indicate station's name, station DIUM code and infrastructure manager's code or county code. When the first mile starts on the private siding add the name of the siding. For larger cities make sure to name exact station's operational name, since there may be a number of station in the city.<br />For example: Villach Sued CCT [81-01990-1](OeBB Infra).<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <MadCap:dropDown>
@@ -32,71 +35,58 @@
         <MadCap:dropDown>
             <MadCap:dropDownHead>#23a <MadCap:dropDownHotspot>Route requested by consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example: Linz (ÖBB Infra) - Berhardstahl/border crossing/ Breclav (SŽCZ) - Paskov, or Plaveč str. hr. (ŽSR) - Prešov - Košice - Čaňa str. hr/border crossing/ Hidasnémeti (MÁV Zrt)</p>
+                <p>Even if, as a railway undertaking, you only operate a train in the country of the train's launch, the full transport route must always be indicated for an exceptional consignment.<br />For example: Linz (ÖBB Infra) - Berhardstahl/border crossing/ Breclav (SŽCZ) - Paskov, or Plaveč str. hr. (ŽSR) - Prešov - Košice - Čaňa str. hr/border crossing/ Hidasnémeti (MÁV Zrt).</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#24 <MadCap:dropDownHotspot>Carriage arrangement*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Declare if forwarding takes place in a block train or in a wagon group. <br />Add maximum speed with which train can run.<br />For example: normal freight train with v<sub>max</sub>. 100 km/h , special freight train with v<sub>max.</sub> 80 km.h.</p>
+                <p>Declare if forwarding takes place in a block train or in a wagon group. In other words if forwarding takes place in special or normal train. Add maximum speed with which a wagon or a vehicle can be towed or run with own wheels under own power.<br />For example: normal freight train with v<sub>max</sub>. 100 km/h , special freight train with v<sub>max.</sub> 80 km/h.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#27a <MadCap:dropDownHotspot>Consignee*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>Consigniee is the entity to which goods are sent to be sold on commission (the buyer).  Add name and address of a consignee. When consignee data is unknown, declare consignee in a descriptive way referring to data in a waybill.<br />For example: Maersk,  in accordance with CIM.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#27b<MadCap:dropDownHotspot>Freight payer</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>A freight payer is an entity which signed a contract with the railway underacting for the transport of a train or a wagon group. Add name of the freight payer and add the contract number. When freight payer data is unknown, declare freight payer in a descriptive way referring to data in a waybill or leave the box empty. <br />For example: Company AB &amp; BA, contract no. ABC-11111-2423. </p>
+                <p>A freight payer is an entity which signed a contract with the railway undertaking for the transport of a train or a wagon group. Add name of the freight payer and add the contract number. When freight payer data is unknown, declare freight payer in a descriptive way referring to data in a waybill or leave the box empty. <br />For example: Company AB &amp; BA, contract no. ABC-11111-2423.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#29 <MadCap:dropDownHotspot>Forwarding conditions</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>For example: _______ .</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
+        <p>Next three points are optional. They are only used in situations arising from the code description. In most applications they may be omitted. Some infrastructure managers , omit these codes in their application templates.</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#25 <MadCap:dropDownHotspot>Custom station</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>It is only required if customs are dealt at neither the frontier station nor the destination station,<br />For example: ________.</p>
+                <p>It is only required if customs are dealt at neither the frontier station nor the destination station,<br />For example: State exact name of the station.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#26 <MadCap:dropDownHotspot>Transhipment port - harbor loading quay</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For larger ports make sure to direct the train to the right group of unloading tracks. Name the harbor loading quay where the train will be loaded or off-loaded.<br />For example: Gdansk Port Polnocny , Rudowy (ore) quay.</p>
+                <p>For larger ports make sure to direct the train to the right group of unloading tracks. Name the harbour loading quay where the train will be loaded or off-loaded.<br />For example: Gdansk Port Polnocny, Rudowy (ore) quay.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#30<MadCap:dropDownHotspot>Direction of travel - label O</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>Direction of travel matters in two situations. For road vehicles carried on wagons it is important to arrive at the station in the right direction of travel, so they can drive off the wagon. In such case direction of travel is described here, and label O is not used. For goods which stick out more to one side of the wagon than the other, label O is used to mark the points on the cargo which sticks out.<br />For example: Take over at the border in Arnoldstein (AT)/ Tarvisio (IT) facing forward.<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
+        <p>The next two codes although they are not required we suggest declaring them. This facilitates the search for similar transport conditions and helps in the queuing of requests when multiple requests are being agreed at once.</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#31<MadCap:dropDownHotspot>Previous forwarding numbers</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>If you make prolongation of the permit with carriage conditions for exactly the same type of cargo and wagon set and on the same path but for the next yearly schedule, then name the previously used approval numbers for the transport. This information can be helpufll for the Infrastructure managers. <br />For example: DB Bza _____, CZ MZ______, <br /></p>
+                <p>If you make prolongation of the permit with carriage conditions for exactly the same type of cargo and wagon set and on the same path but for the next yearly schedule, then name the previously used approval numbers for the transport. This information can be helpful for the Infrastructure managers. <br />For example: DB Bza _____, CZ MZ______.<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#32<MadCap:dropDownHotspot>Loading date, delivery date</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Loading date declare either as exact date, or refer to the calendar week, or a month when the transport is planned to begin. This information helps the infrastructure manager to better plan their work and allocate their resources. As practice shows, the delivery date is of less <br />For example: from 12.08.2024, from the 17/18 week 2024.<br /></p>
+                <p>Loading date declare either as exact date, or refer to the calendar week, or a month when the transport is planned to begin. This information helps the infrastructure manager to better plan their work and allocate their resources. As practice shows, the delivery date is of less importance. When agreeing conditions for a wagon or a vehicle which is ready to  be retranshipped inform IM accordingly.<br />For example: From 12.08.2024, from the 17/18 week 2024.<br />For example: Stopped at station____, ready to be retranshipped.<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
     </body>
 </html>
